--- a/src/mover.html
+++ b/src/mover.html
@@ -15,59 +15,53 @@
         <div class="mover-information">
             <h1>Información del conductor</h1>
             <div class="mover-inf">
-                <form class="form-edit-mover">
-                    <div class="mover-active">
+                <form class="form-edit-mover" id="form-edit-mover">
+                    <div class="mover-active" id="mover-status-container">
                         <div class="text-active">
-                            <p>Activar o bloquer un conductor</p>
+                            <p>Activar o bloquear un conductor</p>
                         </div>
                         <div class="button-active">
                             <div class="form-check form-switch form-check-reverse">
-                                <input class="form-check-input" type="checkbox" id="switchCheckReverse">
+                                <input class="form-check-input" type="checkbox" id="mover-active-switch">
                             </div>
                         </div>
                     </div>
                     <div class="form-floating mb-3 input-edit">
-                        <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-                        <label for="floatingInput">Email address</label>
+                        <input type="text" class="form-control" id="mover-fullName-input" placeholder="name@example.com">
+                        <label for="floatingInput">Nombre</label>
                     </div>
                     <div class="form-floating mb-3 input-edit">
-                        <input type="text" class="form-control" id="floatingPassword" placeholder="Password">
-                        <label for="floatingPassword">Password</label>
+                        <input type="text" class="form-control" id="mover-document-input" placeholder="Password">
+                        <label for="floatingPassword">Documento</label>
                     </div>
                     <div class="form-floating mb-3 input-edit">
-                        <input type="text" class="form-control" id="floatingInput" placeholder="name@example.com">
-                        <label for="floatingInput">Email address</label>
+                        <input type="email" class="form-control" id="mover-email-input" placeholder="name@example.com">
+                        <label for="floatingInput">Email </label>
                     </div>
                     <div class="form-floating mb-3 input-edit">
-                        <input type="text" class="form-control" id="floatingPassword" placeholder="Password">
-                        <label for="floatingPassword">Password</label>
+                        <input type="text" class="form-control" id="mover-phone-input" placeholder="Password">
+                        <label for="floatingPassword">Telefono</label>
                     </div>
                     <div class="form-floating mb-3 input-edit">
-                        <input type="text" class="form-control" id="floatingInput" placeholder="name@example.com">
-                        <label for="floatingInput">Email address</label>
+                        <input type="text" class="form-control" id="mover-vehicleType-input" placeholder="name@example.com">
+                        <label for="floatingInput">Tipo de vehiculo</label>
                     </div>
                     <div class="form-floating mb-3 input-edit">
-                        <input type="text" class="form-control" id="floatingPassword" placeholder="Password">
-                        <label for="floatingPassword">Password</label>
+                        <input type="text" class="form-control" id="mover-enrollVehicle-input" placeholder="name@example.com">
+                        <label for="floatingInput">Placas del vehículo</label>
                     </div>
                     <div class="form-floating mb-3 input-edit">
-                        <input type="text" class="form-control" id="floatingInput" placeholder="name@example.com">
-                        <label for="floatingInput">Email address</label>
+                        <input type="text" class="form-control" id="mover-licenseNumber-input" placeholder="name@example.com">
+                        <label for="floatingInput">Licencia </label>
                     </div>
-                    <div class="form-floating mb-3 input-edit">
-                        <input type="text" class="form-control" id="floatingPassword" placeholder="Password">
-                        <label for="floatingPassword">Password</label>
-                    </div>
-                    <div class="form-floating mb-3 input-edit">
-                        <input type="text" class="form-control" id="floatingInput" placeholder="name@example.com">
-                        <label for="floatingInput">Email address</label>
-                    </div>
-
-                </form>
-                <div class="d-grid gap-2 d-md-flex justify-content-md-start ">
-                    <button class="btn btn-lg btn-success me-md-2" type="button"><i class="fas fa-save"></i> Guardar
-                        Información</button>
-                </div>
+                    <input type="hidden" id="moverId" name="moverId">   
+            <div class="mt-5 d-block">
+                <button class="btn btn-lg btn-success" type="submit">
+                    <i class="fas fa-save"></i> Guardar Información
+                </button>
+            </div>
+                   
+                </form>  
             </div>
         </div>
 
@@ -76,6 +70,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
         crossorigin="anonymous"></script>
+        <script type="module" src="js/controller/movers/moverController.js"></script>
 </body>
 
 </html>
