--- a/src/movers.html
+++ b/src/movers.html
@@ -24,27 +24,18 @@
                     <tr>
                         <th scope="col">ID</th>
                         <th scope="col">Nombre</th>
-                        <th scope="col">Email</th>
                         <th scope="col">Documento</th>
+                        <th scope="col">Email</th>
+                        <th scope="col">Télefono</th>
                         <th scope="col">Fecha de registro</th>
                         <th scope="col">Tipo de vehículo</th>
-                        <th scope="col">PLaca</th>
+                        <th scope="col">Placa</th>
                         <th scope="col">Status</th>
                         <th scope="col">Acciones</th>
                     </tr>
                 </thead>
-                <tbody>
-                    <tr>
-                        <th scope="row">1</th>
-                        <td>Mark</td>
-                        <td>loquesea@example.com</td>
-                        <td>123456789</td>
-                        <td>01-10-25</td>
-                        <td>Furgoneta</td>
-                        <td>ABC 123</td>
-                        <td>Activo</td>                     
-                        <td><a href="mover.html" class="mover-edit">Editar <i class="fas fa-user-edit"></i></a>
-                        </td>
+                <tbody id="movers-table-body">
+                    <tr>                    
                     </tr>   
                 </tbody>
             </table>
@@ -54,5 +45,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
         crossorigin="anonymous"></script>
+        <script type="module" src="./js/controller/movers/listMoverController.js"></script>
 </body>
 </html>
